fixing overlapping style

--- a/src/webparts/mergedCalendar/components/Room.module.scss
+++ b/src/webparts/mergedCalendar/components/Room.module.scss
@@ -62,10 +62,11 @@
 }
 
 .filterWarning{
-    position: absolute;
+    // position: absolute;
     width: 100%;
     display: block;
-    top: -60px;
+    // top: -60px;
+    margin-bottom: 25px;
 }
 
 .roomsFilter{
